--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -108,6 +108,17 @@
           Designers</a></div>
     </div>
   </footer>
+
+  <!-- Service Workers -->
+  <script>
+    // Check that service workers are supported
+    if ('serviceWorker' in navigator) {
+      // Use the window load event to keep the page load performant
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/service-worker.js');
+      });
+    }
+  </script>
 </body>
 
 </html>
